Fixed grid being cut off from view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,8 @@
+
 body {
-    position: relative;
-    width: 100%;
     font-family: 'Inconsolata', monospace;
-    margin: 0 auto;
     font-size: 16px;
+    position: relative;
 }
 
 #message-field {
@@ -16,9 +15,10 @@ body {
     display: grid;
     grid-template-columns: 8fr 1fr 1fr;
     grid-gap: 10px;
-    margin: 10px;
     position: fixed;
     bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .in-form {
